# omp_execises

./: CMakeLists.txt  README.md
ex2/: CMakeLists.txt  ex2.cxx  ex2b.cxx
